snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.120746-1-all.jar.sha256
ba38a127236f16f66d77ee01744c4253ee906a22094135872b34bfff2656aa85